--- a/index.html
+++ b/index.html
@@ -55,39 +55,39 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button class="hero-button" data-modal-open type="button">
+        <button class="hero__button" data-modal-open type="button">
           Замовити послугу
         </button>
       </section>
       <section class="section">
-        <div class="container">
-          <h2 class="section-title rest">Наші переваги</h2>
-          <ul class="section-list list">
-            <li class="section-list__iteam">
-              <h3 class="section-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="section-list__text">
+        <div class="benefits container">
+          <h2 class="benefits-title rest">Наші переваги</h2>
+          <ul class="benefits-list list">
+            <li class="benefits-list__iteam">
+              <h3 class="benefits-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-list__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="section-list__iteam">
-              <h3 class="section-list__title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="section-list__text">
+            <li class="benefits-list__iteam">
+              <h3 class="benefits-list__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-list__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="section-list__iteam">
-              <h3 class="section-list__title">ПЛАНУВАННЯ</h3>
-              <p class="section-list__text">
+            <li class="benefits-list__iteam">
+              <h3 class="benefits-list__title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-list__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="section-list__iteam">
-              <h3 class="section-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="section-list__text">
+            <li class="benefits-list__iteam">
+              <h3 class="benefits-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-list__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -95,7 +95,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-works">
+      <section class="section">
         <div class="container">
           <h2 class="section-works__title">Чим ми займаємося</h2>
           <ul class="section-works__list list">
@@ -120,7 +120,7 @@
         </div>
       </section>
       <section class="section-team section">
-        <div class="container">
+        <div class="team container">
           <h2 class="section-team__title">Наша команда</h2>
           <ul class="section-team__list list">
             <li class="section-team__iteam">
