--- a/portfolio.html
+++ b/portfolio.html
@@ -54,178 +54,190 @@
     </header>
     <main>
       <section class="section">
-        <div class="container">
-          <h1 class="section-title rest">Портфоліо</h1>
-          <ul class="buttons">
-            <li class="text current">
-              <button type="button" class="btn-text">Усі</button>
+        <div class="page-navigation container">
+          <h1 class="page-navigation__title rest">Портфоліо</h1>
+          <ul class="page-navigation__list">
+            <li class="page-navigation__iteam current">
+              <button type="button" class="page-navigation__button">Усі</button>
             </li>
-            <li class="text">
-              <button type="button" class="btn-text">Веб-сайти</button>
+            <li class="page-navigation__iteam">
+              <button type="button" class="page-navigation__button">
+                Веб-сайти
+              </button>
             </li>
-            <li class="text">
-              <button type="button" class="btn-text">Додатки</button>
+            <li class="page-navigation__iteam">
+              <button type="button" class="page-navigation__button">
+                Додатки
+              </button>
             </li>
-            <li class="text">
-              <button type="button" class="btn-text">Дизайн</button>
+            <li class="page-navigation__iteam">
+              <button type="button" class="page-navigation__button">
+                Дизайн
+              </button>
             </li>
-            <li class="text">
-              <button type="button" class="btn-text">Маркетинг</button>
+            <li class="page-navigation__iteam">
+              <button type="button" class="page-navigation__button">
+                Маркетинг
+              </button>
             </li>
           </ul>
-          <ul class="btn">
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+          <ul class="card-portfolio">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/веб-сайт.jpg" alt="веб-сайт" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <div class="iteam-text">
-                  <h3 class="title">Технокряк</h3>
-                  <p class="subtitle">Веб-сайт</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Технокряк</h3>
+                  <p class="card-block__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/Дизайн.jpg" alt="Дизайн" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <div class="iteam-text">
-                  <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                  <p class="subtitle">Дизайн</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="card-block__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/додаток.jpg" alt="додаток" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Ресторан Seafood</h3>
-                  <p class="subtitle">Додаток</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Ресторан Seafood</h3>
+                  <p class="card-block__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img
                     src="./images/маркетинг.jpg"
                     alt="маркетинг"
                     width="370"
                   />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Проєкт Prime</h3>
-                  <p class="subtitle">Маркетинг</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Проєкт Prime</h3>
+                  <p class="card-block__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/додаток2.jpg" alt="додаток2" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Технокряк</h3>
-                  <p class="subtitle">Додаток</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Технокряк</h3>
+                  <p class="card-block__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/вебсайт.jpg" alt="вебсайт" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 lang="en" class="title">Inspiration has no Borders</h3>
-                  <p class="subtitle">Веб-сайт</p>
+                <div class="card-block">
+                  <h3 lang="en" class="card-block__title">
+                    Inspiration has no Borders
+                  </h3>
+                  <p class="card-block__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/дизайн2.jpg" alt="дизайн2" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Видання Limited Edition</h3>
-                  <p class="subtitle">Дизайн</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Видання Limited Edition</h3>
+                  <p class="card-block__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/марк2.jpg" alt="Маркетинг2" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Проєкт LAB</h3>
-                  <p class="subtitle">Маркетинг</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Проєкт LAB</h3>
+                  <p class="card-block__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="iteam">
-              <a class="iteam-site" href="">
-                <div class="img-overlay">
+            <li class="card-portfolio__iteam">
+              <a class="card-portfolio__link" href="">
+                <div class="overlay">
                   <img src="./images/дод.jpg" alt="додаток" width="370" />
-                  <p class="text-overlay">
+                  <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
 
-                <div class="iteam-text">
-                  <h3 class="title">Growing Business</h3>
-                  <p class="subtitle">Додаток</p>
+                <div class="card-block">
+                  <h3 class="card-block__title">Growing Business</h3>
+                  <p class="card-block__text">Додаток</p>
                 </div>
               </a>
             </li>
