--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,14 @@
           <li class="iteam">
             <a href="mailto:info@devstudio.com" class="link">
               <svg class="envelope">
-                <use href="/images/icons.svg#icon-envelope"></use></svg
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="iteam">
             <a href="tel:+380961111111" class="link">
               <svg class="smartphone">
-                <use href="/images/icons.svg#icon-smartphone"></use></svg
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+380961111111</a
             >
           </li>
