--- a/index.html
+++ b/index.html
@@ -19,33 +19,36 @@
     <title>Студія</title>
   </head>
   <body>
-    <header class="page-header">
-      <nav class="container main-nav">
+    <header class="header">
+      <nav class="header-nav container">
         <a href="./index.html" class="logo">
           <span class="logo-web">Web</span>Studio</a
         >
-        <ul class="site-nav list">
-          <li class="iteam">
-            <a href="./index.html" class="link current">Студія</a>
+        <ul class="header-list list">
+          <li class="header-list__iteam">
+            <a href="./index.html" class="header-list__link current">Студія</a>
           </li>
-          <li class="iteam">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+          <li class="header-list__iteam">
+            <a href="./portfolio.html" class="header-list__link">Портфоліо</a>
           </li>
-          <li class="iteam">
-            <a href="" class="link">Контакти</a>
+          <li class="header-list__iteam">
+            <a href="" class="header-list__link">Контакти</a>
           </li>
         </ul>
-        <ul class="contact list">
-          <li class="iteam">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="envelope">
+        <ul class="header-list--second list">
+          <li class="header-list__iteam--second">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-list__link--second"
+            >
+              <svg width="16" height="12" class="header-list__icon--second">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="iteam">
-            <a href="tel:+380961111111" class="link">
-              <svg class="smartphone">
+          <li class="header-list__iteam--second">
+            <a href="tel:+380961111111" class="header-list__link--second">
+              <svg width="10" height="16" class="header-list__icon--second">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+380961111111</a
             >
@@ -55,14 +58,14 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button class="hero__button" data-modal-open type="button">
+        <button class="hero-button" data-modal-open type="button">
           Замовити послугу
         </button>
       </section>
-      <section class="section">
-        <div class="benefits container">
+      <section class="benefits section">
+        <div class="container">
           <h2 class="benefits-title rest">Наші переваги</h2>
           <ul class="benefits-list list">
             <li class="benefits-list__iteam">
@@ -95,35 +98,35 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="works section">
         <div class="container">
-          <h2 class="section-works__title">Чим ми займаємося</h2>
-          <ul class="section-works__list list">
-            <li class="section-works__iteam">
+          <h2 class="works-title">Чим ми займаємося</h2>
+          <ul class="works-list list">
+            <li class="works-list__iteam">
               <img
-                class="section-works__image"
+                class="works-list__image"
                 src="./images/skil-1.png"
                 alt=""
                 width="370"
               />
-              <p class="section-works__text">ДЕСКТОПНІ ДОДАТКИ</p>
+              <p class="works-list__text">ДЕСКТОПНІ ДОДАТКИ</p>
             </li>
-            <li class="section-works__iteam">
+            <li class="works-list__iteam">
               <img src="./images/skil-2.png" alt="" width="370" />
-              <p class="section-works__text">МОБІЛЬНІ ДОДАТКИ</p>
+              <p class="works-list__text">МОБІЛЬНІ ДОДАТКИ</p>
             </li>
-            <li class="section-works__iteam">
+            <li class="works-list__iteam">
               <img src="./images/skil-3.png" alt="" width="370" />
-              <p class="section-works__text">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
+              <p class="works-list__text">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
             </li>
           </ul>
         </div>
       </section>
-      <section class="section-team section">
-        <div class="team container">
-          <h2 class="section-team__title">Наша команда</h2>
-          <ul class="section-team__list list">
-            <li class="section-team__iteam">
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-list__iteam">
               <img
                 class="section-team__image"
                 src="./images/ProductDesigner.jpg"
@@ -181,7 +184,7 @@
                 </ul>
               </div>
             </li>
-            <li class="section-team__iteam">
+            <li class="team-list__iteam">
               <img
                 class="section-team__image"
                 src="./images/FrontendDeveloper.jpg"
@@ -239,7 +242,7 @@
                 </ul>
               </div>
             </li>
-            <li class="section-team__iteam">
+            <li class="team-list__iteam">
               <img
                 class="section-team__image"
                 src="./images/Marketing.jpg"
@@ -297,7 +300,7 @@
                 </ul>
               </div>
             </li>
-            <li class="section-team__iteam">
+            <li class="team-list__iteam">
               <img
                 class="section-team__image"
                 src="./images/UIDesigner.jpg"
@@ -358,78 +361,78 @@
           </ul>
         </div>
       </section>
-      <section class="section-clients section">
+      <section class="clients section">
         <div class="container">
-          <h2 class="section-clients__title">Постійні клієнти</h2>
-          <ul class="section-clients__list list">
-            <li class="section-clients__iteam">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="section-clients__iteam">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="section-clients__iteam">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow "
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="section-clients__iteam">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow "
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="section-clients__iteam">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow "
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="section-clients__iteam">
+            <li class="clients-list__iteam">
               <a
                 href="#"
-                class="section-clients__link"
+                class="clients-list__link"
                 target="_blank"
                 rel="noopener noreferrer nofollow "
               >
-                <svg class="icon-logo" height="60">
+                <svg class="clients-list__icon" height="60">
                   <use href="./images/icons.svg#icon-client-6"></use>
                 </svg>
               </a>
@@ -444,7 +447,6 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-
           <form class="modal-form js-speaker-form">
             <h2 class="modal-form__title">
               Залиште свої дані, ми вам передзвонимо
@@ -509,42 +511,42 @@
       </div>
       <script src="./js/modal.js"></script>
     </main>
-    <footer class="card-footer">
-      <div class="container card__nav">
+    <footer class="footer">
+      <div class="footer-card container">
         <div>
-          <a href="./index.html" class="logo">
-            <span class="logo-web">Web</span>Studio</a
-          >
-          <address class="card-footer__address">
-            <ul class="card-footer__list list">
-              <li class="card-footer__iteam">
+          <a href="./index.html" class="footer-logo">
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <address class="footer-card__address">
+            <ul class="footer-list list">
+              <li class="footer-list__iteam">
                 <a
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="card-footer__bluelink"
+                  class="card-footer__link--blue"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="card-footer__iteam">
-                <a href="mailto:info@devstudio.com" class="card-footer__link"
+              <li class="footer-list__iteam">
+                <a href="mailto:info@devstudio.com" class="footer-list__link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="card-footer__iteam">
-                <a href="tel:+380961111111" class="card-footer__link"
+              <li class="footer-list__iteam">
+                <a href="tel:+380961111111" class="footer-list__link"
                   >+380961111111</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="card-social">
-          <h3 class="card-social__title">Приєднуйтесь</h3>
-          <ul class="card-social__list list">
+        <div class="social">
+          <h3 class="social-title">Приєднуйтесь</h3>
+          <ul class="social-list list">
             <li>
-              <a class="card-social__link" href="#" aria-label="instagram">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="instagram">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-instagram"
                     width="20"
@@ -554,8 +556,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="twitter">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="twitter">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-twitter"
                     width="20"
@@ -565,8 +567,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="facebook">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="facebook">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-facebook"
                     width="20"
@@ -576,8 +578,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="linkedin">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="linkedin">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-linkedin"
                     width="20"
