--- a/portfolio.html
+++ b/portfolio.html
@@ -18,33 +18,38 @@
     <title>Портфоліо</title>
   </head>
   <body>
-    <header class="page-header">
-      <nav class="container main-nav">
+    <header class="header">
+      <nav class="header-nav container">
         <a href="./index.html" class="logo">
           <span class="logo-web">Web</span>Studio</a
         >
-        <ul class="site-nav list">
-          <li class="iteam">
-            <a href="./index.html" class="link">Студія</a>
+        <ul class="header-list list">
+          <li class="header-list__iteam">
+            <a href="./index.html" class="header-list__link">Студія</a>
           </li>
-          <li class="iteam">
-            <a href="./portfolio.html" class="link current">Портфоліо</a>
+          <li class="header-list__iteam">
+            <a href="./portfolio.html" class="header-list__link current"
+              >Портфоліо</a
+            >
           </li>
-          <li class="iteam">
-            <a href="" class="link">Контакти</a>
+          <li class="header-list__iteam">
+            <a href="" class="header-list__link">Контакти</a>
           </li>
         </ul>
-        <ul class="contact list">
-          <li class="iteam">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="envelope">
+        <ul class="header-list--second list">
+          <li class="header-list__iteam--second">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-list__link--second"
+            >
+              <svg width="16" height="12" class="header-list__icon--second">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="iteam">
-            <a href="tel:+380961111111" class="link">
-              <svg class="smartphone">
+          <li class="header-list__iteam--second">
+            <a href="tel:+380961111111" class="header-list__link--second">
+              <svg width="10" height="16" class="header-list__icon--second">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+380961111111</a
             >
@@ -245,42 +250,42 @@
         </div>
       </section>
     </main>
-    <footer class="card-footer">
-      <div class="container card__nav">
+    <footer class="footer">
+      <div class="footer-card container">
         <div>
-          <a href="./index.html" class="logo">
-            <span class="logo-web">Web</span>Studio</a
-          >
-          <address class="card-footer__address">
-            <ul class="card-footer__list list">
-              <li class="card-footer__iteam">
+          <a href="./index.html" class="footer-logo">
+            <span class="logo-web">Web</span>Studio
+          </a>
+          <address class="footer-card__address">
+            <ul class="footer-list list">
+              <li class="footer-list__iteam">
                 <a
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="card-footer__bluelink"
+                  class="card-footer__link--blue"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="card-footer__iteam">
-                <a href="mailto:info@devstudio.com" class="card-footer__link"
+              <li class="footer-list__iteam">
+                <a href="mailto:info@devstudio.com" class="footer-list__link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="card-footer__iteam">
-                <a href="tel:+380961111111" class="card-footer__link"
+              <li class="footer-list__iteam">
+                <a href="tel:+380961111111" class="footer-list__link"
                   >+380961111111</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="card-social">
-          <h3 class="card-social__title">Приєднуйтесь</h3>
-          <ul class="card-social__list list">
+        <div class="social">
+          <h3 class="social-title">Приєднуйтесь</h3>
+          <ul class="social-list list">
             <li>
-              <a class="card-social__link" href="#" aria-label="instagram">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="instagram">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-instagram"
                     width="20"
@@ -290,8 +295,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="twitter">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="twitter">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-twitter"
                     width="20"
@@ -301,8 +306,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="facebook">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="facebook">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-facebook"
                     width="20"
@@ -312,8 +317,8 @@
               </a>
             </li>
             <li>
-              <a class="card-social__link" href="#" aria-label="linkedin">
-                <svg class="card-social__icon">
+              <a class="social-list__link" href="#" aria-label="linkedin">
+                <svg class="social-list__icon">
                   <use
                     href="./images/icons.svg#icon-linkedin"
                     width="20"
